[package]
name = "gtk-rust-modules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.0"

[[bin]]
name = "runner"
path = "src/runner.rs"

[[bin]]
name = "hunter"
path = "src/hunter.rs"
